Buttons visualize which one is pressed.

--- a/www/index.html
+++ b/www/index.html
@@ -27,8 +27,8 @@
     <ion-pane ng-controller="CounterCtrl">
       <ion-content>
         <div class="suppliers">
-          <a class="button button-large" id="breastL" ng-click="toggleFeeding('L')">L</a> 
-          <a class="button button-large" id="breastR" ng-click="toggleFeeding('R')">R</a> 
+          <a class="button button-large" id="breastL" ng-click="toggleFeeding('L')">{{leftSign}}</a> 
+          <a class="button button-large" id="breastR" ng-click="toggleFeeding('R')">{{rightSign}}</a> 
         </div>
 
        <!-- <ion-scroll> -->
