--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/protos.js"></script>
     <script src="js/model.js"></script>
     <script src="js/app.js"></script>
   </head>
