Sync all feedings

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,9 @@
           </ion-list>
        <!-- </ion-scroll> -->
 
-
+       <div class="suppliers">
+         <a class="button button-large" ng-click="postFeeding()">Sync up all</a> 
+       </div>
       </ion-content>
     </ion-pane>
   </body>
