Toasters when syncing

--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
        <!-- </ion-scroll> -->
 
        <div class="suppliers">
-         <a class="button button-large" ng-click="postFeeding()">Sync up all</a> 
+         <a class="button button-large" ng-click="postFeeding()">Upload all</a> 
        </div>
       </ion-content>
     </ion-pane>
