--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,8 @@
             <ion-item ng-repeat="feeding in feedings">
               <span class="supplier">{{feeding.supplier}}</span>
               <span class="starttime">{{feeding.startTime | date:'EEE dd/MM HH:mm'}}</span>
-              <span class="duration">{{feeding.duration | date:'m:ss'}}</span>
+              <span class="duration">{{feeding.duration | date:'m'}} min</span>
+              <span class="between">{{timeToPrevFeeding($index)}}</span>
               <!-- <span class="volume">{{feeding.volume}}</span> -->
             </ion-item>
           </ion-list>
