--- a/www/index.html
+++ b/www/index.html
@@ -31,13 +31,13 @@
     <ion-pane ng-controller="CounterCtrl">
       <ion-content>
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
-          <ion-slide><ng-include src="'list.html'" /></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[0]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[1]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[2]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[3]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[4]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[5]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[6]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide>
 
             <div class="suppliers">
@@ -53,7 +53,9 @@
                 <!-- <span class="volume">{{currentFeeding.volume}}</span> -->
               </div>
               <div class="timeSinceLast">Last feeding was <span class="time">{{timeSinceLast}}</span>{{timeSinceLastSuffix}}</div>
-              <ng-include src="'list.html'" />
+              <ion-item ng-repeat="feeding in feedings[7]">
+                <ng-include src="'list.html'" />
+              </ion-item>
             </ion-list>
 
             <div class="suppliers">
