--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,18 @@
 
     <ion-pane ng-controller="CounterCtrl">
       <ion-content>
+        <div class="suppliers">
+          <a class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></a> 
+          <a class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></a> 
+        </div>
+        <div class="ongoing">
+          <span class="supplier">{{currentFeeding.supplier}}</span>
+          <span class="starttime">{{currentFeeding.startTime | date:'EEE dd/MM HH:mm'}}</span>
+          <span class="duration">{{currentFeeding.duration | date:'m:ss'}}</span>
+          <!-- <span class="volume">{{currentFeeding.volume}}</span> -->
+        </div>
+        <div class="timeSinceLast">Last feeding was <span class="time">{{timeSinceLast}}</span>{{timeSinceLastSuffix}}</div>
+
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[0]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[1]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
@@ -38,31 +50,11 @@
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[4]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[5]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[6]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
-          <ion-slide>
-
-            <div class="suppliers">
-              <a class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></a> 
-              <a class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></a> 
-            </div>
-
-            <ion-list>
-              <div class="ongoing">
-                <span class="supplier">{{currentFeeding.supplier}}</span>
-                <span class="starttime">{{currentFeeding.startTime | date:'EEE dd/MM HH:mm'}}</span>
-                <span class="duration">{{currentFeeding.duration | date:'m:ss'}}</span>
-                <!-- <span class="volume">{{currentFeeding.volume}}</span> -->
-              </div>
-              <div class="timeSinceLast">Last feeding was <span class="time">{{timeSinceLast}}</span>{{timeSinceLastSuffix}}</div>
-              <ion-item ng-repeat="feeding in feedings[7]">
-                <ng-include src="'list.html'" />
-              </ion-item>
-            </ion-list>
-
-            <div class="suppliers">
-              <a class="button button-large" ng-click="postFeeding()">Upload all</a> 
-            </div>
-          </ion-slide>
+          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[7]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
         </ion-slide-box>
+        <div class="suppliers">
+          <a class="button button-large" ng-click="postFeeding()">Upload all</a> 
+        </div>
       </ion-content>
     </ion-pane>
   </body>
