The list items get loaded on top of each other when you flick back and forward between slides

--- a/www/index.html
+++ b/www/index.html
@@ -43,15 +43,19 @@
         <div class="timeSinceLast">Last feeding was <span class="time">{{timeSinceLast}}</span>{{timeSinceLastSuffix}}</div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
-          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[0]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
-          <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[1]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
+          <ion-slide ng-repeat="dayFeeding in feedings">
+            <ion-list ng-if="dayFeeding">
+              <ion-item ng-repeat="feeding in dayFeeding"><ng-include src="'list.html'" /></ion-item>
+            </ion-list>
+          </ion-slide>
+<!--           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[1]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[2]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[3]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[4]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[5]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[6]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
           <ion-slide><ion-list><ion-item ng-repeat="feeding in feedings[7]"><ng-include src="'list.html'" /></ion-item></ion-list></ion-slide>
-        </ion-slide-box>
+ -->        </ion-slide-box>
         <div class="suppliers">
           <a class="button button-large" ng-click="postFeeding()">Upload all</a> 
         </div>
