--- a/www/index.html
+++ b/www/index.html
@@ -63,10 +63,31 @@
           <ion-item ng-click="enterCode()">Enter code</ion-item>
           <ion-item ng-click="postAllFeedings()">Upload all</ion-item>
         </ion-list>
+        <script id="enterCodeModal.html" type="text/ng-template">
+          <div class="modal">
+            <ion-header-bar>
+              <h1 class="title">Shared code</h1>
+            </ion-header-bar>
+            <ion-content>
+              <p>Your current code is <strong>{{userId()}}</strong>.</p>
+
+              <div class="list">
+                <label class="item item-input item-stacked-label">
+                  <span class="input-label">Enter code</span>
+                  <input type="text" ng-model="enteredCode" placeholder="{{userId()}}">
+                </label>
+                <button class="button button-block button-positive" ng-click="storeEnteredCode(enteredCode)">Save</button>
+              </div
+               
+            </ion-content>
+          </div>
+        </script>
       </ion-content>
     </ion-side-menu>
 
   </ion-side-menus>
+
+
 
   </body>
 </html>
