--- a/www/index.html
+++ b/www/index.html
@@ -63,6 +63,7 @@
           <ion-item ng-click="share()">Share code</ion-item>
           <ion-item ng-click="enterCode()">Enter code</ion-item>
           <ion-item ng-click="postAllFeedings()">Upload all</ion-item>
+          <ion-item ng-click="vibrate()">Vibrate</ion-item>
         </ion-list>
         <script id="enterCodeModal.html" type="text/ng-template">
           <div class="modal">
