--- a/www/index.html
+++ b/www/index.html
@@ -63,7 +63,7 @@
           <ion-item ng-click="share()">Share code</ion-item>
           <ion-item ng-click="enterCode()">Enter code</ion-item>
           <ion-item ng-click="postAllFeedings()">Upload all</ion-item>
-          <ion-item ng-click="toggleVibrate()">Vibrate</ion-item>
+          <ion-item ng-click="toggleVibrate()" class="item item-icon-right">Vibrate<i ng-show="vibrateOn" class="icon ion-checkmark"></i></ion-item>
         </ion-list>
         <script id="enterCodeModal.html" type="text/ng-template">
           <div class="modal">
