Button to resync today

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 
     <!-- Center content -->
     <ion-side-menu-content>
-      <ion-content ng-controller="CounterCtrl">
+      <ion-content id="CounterApp" ng-controller="CounterCtrl">
         <div class="ongoing">
           <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
           <span class="duration" ng-show="!currentFeeding">0:00</span>
@@ -102,6 +102,7 @@
           <ion-item ng-click="about()">About</ion-item>
           <ion-item ng-click="share()">Share code</ion-item>
           <ion-item ng-click="enterCode()">Enter code</ion-item>
+          <ion-item ng-click="resyncToday()">Resync today</ion-item>
           <ion-item ng-click="postAllFeedings()">Upload all</ion-item>
           <ion-item ng-click="toggleVibrate()" class="item item-icon-right">Vibrate<i ng-show="vibrateOn" class="icon ion-checkmark"></i></ion-item>
         </ion-list>
