--- a/www/list.html
+++ b/www/list.html
@@ -1,4 +1,4 @@
-<div class="durations"><span class="between">{{timeToPrevFeeding(activeSlide, $index)}}</span></div>
+<div class="durations" ng-show="{{timeToPrevFeeding(activeSlide, $index)}}"><span class="between">{{timeToPrevFeeding(activeSlide, $index)}}</span></div>
 <div class="times"><span class="supplier">{{feeding.supplier}}</span> 
   <span class="starttime">{{feeding.startTime | date:'HH:mm'}}</span> - 
   <span class="endtime">{{feeding.startTime | date:'HH:mm'}}</span> 
