--- a/www/list.html
+++ b/www/list.html
@@ -1,5 +1,5 @@
-<div class="durations" ng-show="{{timeToPrevFeeding(activeSlide, $index)}}"><span class="between">{{timeToPrevFeeding(activeSlide, $index)}}</span></div>
-<div class="times"><span class="supplier">{{feeding.supplier}}</span> 
+<div class="durations" ng-show="$index > 0"><span class="between">{{timeToPrevFeeding(activeSlide, $index)}}</span></div>
+<div class="times"><span class="supplier">{{feeding.supplier}}</span>
   <span class="starttime">{{feeding.startTime | date:'HH:mm'}}</span> - 
   <span class="endtime">{{endTime(feeding) | date:'HH:mm'}}</span> 
   <span class="item-note duration">{{feeding.duration | date:'m'}} min</span>
