Moved time since last ..

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,6 @@
           <a class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></a> 
           <a class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></a> 
         </div>
-        <div class="timeSinceLast" ng-show="timeSinceLast"><span class="time">{{timeSinceLast}}</span><p>since last feeding</p></div>
         <div class="loader" ng-show="loading"><i class="ion-loading-c"></i></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
@@ -88,6 +87,12 @@
           <ion-slide>
             <ion-list>
               <div class="day"><i class="ion-arrow-left-b"></i> Today</div>
+              <div class="times timeSinceLast" ng-show="timeSinceLast">
+                <div class="verticalLine"></div>
+                <div class="megaDot"></div>
+                <span class="time">{{timeSinceLast}}</span>
+                <p>since last feeding</p>
+              </div>
               <div ng-repeat="feeding in feedings[7]"><ng-include src="'list.html'" /></div>
             </ion-list>
           </ion-slide>
