Try to see if buttons fix the "have I clicked" issue.

--- a/www/index.html
+++ b/www/index.html
@@ -36,8 +36,8 @@
         </div>
 
     		<div class="suppliers">
-          <a class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></a> 
-          <a class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></a> 
+          <button class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></button> 
+          <button class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></button> 
         </div>
         <div class="loader" ng-show="loading"><i class="ion-loading-c"></i></div>
 
