Added menu button. Skip the background changes for buttons on HOVER

--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <!-- Center content -->
     <ion-side-menu-content>
       <ion-content id="CounterApp" ng-controller="CounterCtrl">
+        <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
         <div class="ongoing">
           <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
           <span class="duration" ng-show="!currentFeeding">0:00</span>
