--- a/www/index.html
+++ b/www/index.html
@@ -88,7 +88,7 @@
           <ion-slide>
             <ion-list>
               <div class="day"><i class="ion-arrow-left-b"></i> Today</div>
-              <div ng-show="feedings[7] && feedings[7].length > 0" class="times timeSinceLast" ng-show="timeSinceLast">
+              <div ng-show="mostRecentFinishedFeeding" class="times timeSinceLast" ng-show="timeSinceLast">
                 <div class="verticalLine"></div>
                 <div class="megaDot"></div>
                 <span class="time">{{timeSinceLast}}</span>
