--- a/www/list.html
+++ b/www/list.html
@@ -2,7 +2,7 @@
   <div class="verticalLine"></div>
   <span class="between">{{timeToPrevFeeding(activeSlide, $index)}}</span>
 </div>
-<div class="times"><span class="supplier supplier{{feeding.supplier}}">{{feeding.supplier}}</span>
+<div class="times" on-hold="editFeeding(feeding)"><span class="supplier supplier{{feeding.supplier}}">{{feeding.supplier}}</span>
   <span class="starttime">{{feeding.startTime | date:'HH:mm'}}</span> - 
   <span class="endtime">{{endTime(feeding) | date:'HH:mm'}}</span> 
   <span class="item-note duration">{{feeding.duration | date:'m'}} min</span>
