--- a/www/index.html
+++ b/www/index.html
@@ -31,20 +31,12 @@
     <ion-side-menu-content>
       <ion-content id="CounterApp" ng-controller="CounterCtrl">
         <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
-        <div class="ongoing" ng-show="unconfirmedBottleFeeding !== false">
-          <button class="icon ion-checkmark button-confirm" ng-click="confirmBottleFeeding()"></button>
-          <span class="duration">{{unconfirmedBottleFeeding}}0ml</span>
-          <button class="icon ion-close button-close" ng-click="cancelBottleFeeding()"></button>
-        </div>
-        <div class="ongoing" ng-show="unconfirmedBottleFeeding === false">
+        <div class="ongoing">
           <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
           <span class="duration" ng-show="!currentFeeding">0:00</span>
         </div>
 
-        <div class="suppliers" ng-show="unconfirmedBottleFeeding !== false">
-        <input type="range" min="0" max="30" value="{{unconfirmedBottleFeeding}}" ng-model="unconfirmedBottleFeeding">
-        </div>
-        <div class="suppliers" ng-show="unconfirmedBottleFeeding === false">
+        <div class="suppliers">
           <button class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></button> 
           <button class="button button-round button-bottle" id="bottle"  ng-click="bottleFeeding()"><i class="ion-waterdrop"></i></button> 
           <button class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></button> 
