--- a/www/list.html
+++ b/www/list.html
@@ -8,8 +8,8 @@
 <div class="times">
   <span class="row" ng-show="feeding.supplier === 'B'">
     <div class="verticalLine"></div>
-    <span class="supplierContainer" ng-click="editFeeding(feeding)">
-      <span class="supplier supplier{{feeding.supplier}}"><i class="ion-waterdrop"></i></span>
+    <span class="supplierContainer">
+      <span ng-click="editFeeding(feeding)" class="supplier supplier{{feeding.supplier}}"><i class="ion-waterdrop"></i></span>
     </span>
     <span class="col"></span>
     <span class="col">
@@ -20,8 +20,8 @@
   </span>
   <span class="row" ng-show="feeding.supplier !== 'B'">
     <div class="verticalLine"></div>
-    <span class="supplierContainer" ng-click="editFeeding(feeding)">
-      <span class="supplier supplier{{feeding.supplier}}">{{feeding.supplier}}</span>
+    <span class="supplierContainer">
+      <span ng-click="editFeeding(feeding)" class="supplier supplier{{feeding.supplier}}">{{feeding.supplier}}</span>
     </span>
     <span class="col"></span>
     <span class="col">
