--- a/www/index.html
+++ b/www/index.html
@@ -30,17 +30,20 @@
     <!-- Center content -->
     <ion-side-menu-content>
       <ion-content id="CounterApp" ng-controller="CounterCtrl">
-        <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
-        <div class="ongoing">
-          <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
-          <span class="duration" ng-show="!currentFeeding">0:00</span>
-        </div>
+        <div class="counter">
+          <button menu-toggle="left" class="button button-icon icon ion-navicon button-menu"></button>
+          <div class="ongoing">
+            <span class="duration" ng-show="currentFeeding">{{currentFeeding.duration | date:'m:ss'}}</span>
+            <span class="duration" ng-show="!currentFeeding">0:00</span>
+          </div>
 
-        <div class="suppliers">
-          <button class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></button> 
-          <button class="button button-round button-bottle" id="bottle"  ng-click="bottleFeeding()"><i class="ion-waterdrop"></i></button> 
-          <button class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></button> 
-        </div>
+          <div class="suppliers">
+            <button class="button button-round {{lClass}}" id="breastL" ng-click="toggleFeeding('L')" ng-bind-html="leftSign"></button> 
+            <button class="button button-round button-bottle" id="bottle"  ng-click="bottleFeeding()"><i class="ion-waterdrop"></i></button> 
+            <button class="button button-round {{rClass}}" id="breastR" ng-click="toggleFeeding('R')" ng-bind-html="rightSign"></button> 
+          </div>
+        </div>  
+
         <div class="loader" ng-show="loading"><i class="ion-loading-c"></i></div>
 
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
