Side menu getting some tlc

--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
 
     <!-- Left menu -->
     <ion-side-menu side="left">
-      <ion-content ng-controller="MenuCtrl">
+      <ion-content ng-controller="MenuCtrl" class="sidemenu">
         <ion-list>
           <ion-item ng-click="about()">About</ion-item>
           <ion-item ng-click="share()">Share code</ion-item>
