Show time to next feeding across days.

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
         <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" active-slide="activeSlide">
           <ion-slide ng-repeat="feedingDay in feedings.slice(0,7) track by $index">
             <ion-list>
-              <div class="day"><i class="ion-arrow-left-b"></i> {{feedingDay[0].startTime | date:'EEEE'}} <i class="ion-arrow-right-b"></i> </div>
+              <div class="day"><i ng-show="$index > 0 && feedings[$index-1]" class="ion-arrow-left-b"></i> {{feedingDay[0].startTime | date:'EEEE'}} <i class="ion-arrow-right-b"></i> </div>
               <div ng-repeat="feeding in feedingDay"><ng-include src="'list.html'" /></div>
             </ion-list>
           </ion-slide>
