--- a/www/list.html
+++ b/www/list.html
@@ -1,4 +1,4 @@
-<div class="durations" ng-show="$index > 0">
+<div class="durations" ng-show="!(activeSlide == 7 && $index == 0)">
   <span class="row">
     <div class="verticalLine"></div>
     <span class="col between">{{timeToPrevFeeding(activeSlide, $index)}}</span>
