--- a/www/index.html
+++ b/www/index.html
@@ -71,13 +71,10 @@
     <ion-side-menu side="left">
       <ion-content ng-controller="MenuCtrl" class="sidemenu">
         <ion-list>
-          <ion-item ng-click="about()">About</ion-item>
           <ion-item ng-click="share()">Share code</ion-item>
           <ion-item ng-click="enterCode()">Enter code</ion-item>
-          <ion-item ng-click="resyncToday()">Resync today</ion-item>
-          <ion-item ng-click="postAllFeedings()">Upload all</ion-item>
-          <ion-item ng-click="toggleDemoMode()" class="item item-icon-right">Demo mode<i ng-show="demoModeOn" class="icon ion-checkmark"></i></ion-item>
-          <ion-item ng-click="toggleVibrate()" class="item item-icon-right">Vibrate<i ng-show="vibrateOn" class="icon ion-checkmark"></i></ion-item>
+          <ion-item ng-click="toggleDemoMode()" class="item item-icon-right">Demo mode<i ng-show="demoModeOn" class="icon ion-toggle-filled"></i><i ng-show="!demoModeOn" class="icon ion-toggle"></i></ion-item>
+          <ion-item ng-click="toggleVibrate()" class="item item-icon-right">Buzz every 5 min<i ng-show="vibrateOn" class="icon ion-toggle-filled"></i><i ng-show="!vibrateOn" class="icon ion-toggle"></i></ion-item>
           <ion-item ng-click="exitApp()">Exit</ion-item>
         </ion-list>
         <script id="enterCodeModal.html" type="text/ng-template">
